# AI

Kalah/: Kalah.java  KalahAI.java  KalahBoard.java
Kalah/.metals/: metals.lock.db  metals.mv.db
ass3/Aufgabe3/: Timetabling.py  bundesländer.py  einstein.py  packungsproblem.py  sendmoremoney.py
ki/: linear_content.txt  neuronen_content.txt
ki/exercise_1/: ki_ml_blatt_1.ipynb
puzzle8/: README.md  main.py  pyproject.toml
puzzle8/src/puzzle8/: __init__.py  __main__.py  astar.py  heuristics.py  ids.py  parity.py  puzzle.py  utils.py
puzzle8/tests/: test_astar.py  test_heuristics.py  test_ids.py  test_parity.py  test_puzzle.py  test_random_states.py
