[project]
name = "8-puzzle-solver"
version = "0.1.0"
description = "8-Puzzle solver using IDS and A* search algorithms"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
puzzle8 = "puzzle8.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/puzzle8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
